# c-tasks-orlov

./: CMakeLists.txt  README.md  data.txt
include/: LabyrinthPathFinder.h  image.h  labyrinth.h
src/: LabyrinthPathFinder.cpp  image.cpp  labyrinth.cpp  main.cpp
tests/: tests.cpp
